fix attempt: alignments

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
 img {
   display: block;
   margin: 0 auto 20px auto;
+  align-items: center
 }
 
 #staffGallery{
